separate a css file and test image in conten issue

--- a/index.html
+++ b/index.html
@@ -10,51 +10,27 @@
 		}
 
 		.overtop {
-			position: relative;
 			height: 300px;
 			width: 200px;
 		}
 
 		.container {
-			overflow: hidden;
-			height: 100%;
 			border: 1px solid black;
 		}
 
 		.content {
 			width: 200px;
 			margin: 0 auto;
-			top: 0;
-			position: relative;
 		}
 
-		.track {
-			width: 7px;
-			background: rgba(0,0,0, 0.5);
-			height: 10px;
-			border-radius: 5px;
-			position: absolute;
-			top: 1px;
-			right: 2px;
-			display: none;
-		}
-
-		.trackHolder {
-			position: absolute;
-			top: 0;
-			right: 0;
-			height: 100%;
-			width: 20px;
-		}
 	</style>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="js/jquery.mousewheel.js" ></script>
 	<script type="text/javascript" src="js/just-another-scrollbar.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/just-another-scrollbar.css" />
 	<script type="text/javascript">
 	tid = 0;
-	setupScroll = function(){
-	};
 
 	$(document).ready(function(){
 		$('.overtop').just_another_scrollbar();
@@ -62,18 +38,18 @@
 	</script>
 </head>
 <body>
-<div class="overtop" >
-	<div class="container">
-		<div class="content" >
+<div class="overtop jas-relative" >
+	<div class="container jas-container">
+		<div class="content jas-content" >
 			Sugar plum powder pie toffee apple pie gingerbread cotton candy powder. Pie candy canes powder macaroon pastry donut. Powder cheesecake sesame snaps lollipop candy canes chupa chups sweet soufflé. Jujubes chocolate dessert dragée dragée gummies. Apple pie dessert icing. Chupa chups donut chocolate. Cookie halvah chocolate pastry. Gummies cheesecake fruitcake cupcake. Gummies powder chupa chups pie sweet. Halvah wafer bonbon lemon drops cotton candy chocolate. Pastry cheesecake bear claw. Tart sweet applicake powder tart applicake gummies sesame snaps. Sweet roll biscuit fruitcake tootsie roll jelly beans candy canes topping. Donut donut donut.
 			Wypas liquorice icing candy sweet. Tiramisu marzipan icing. Wafer marshmallow apple pie chocolate bar bear claw tootsie roll. Pastry chocolate gummi bears jelly-o. Icing tiramisu cheesecake lemon drops. Sesame snaps icing gingerbread sugar plum gummies gingerbread chupa chups faworki. Sweet roll gummies chocolate. Danish jelly-o bonbon pie. Powder fruitcake gingerbread lemon drops faworki wypas ice cream muffin wypas. Pudding apple pie sugar plum sesame snaps candy canes. Brownie jelly fruitcake. Donut croissant caramels donut gummi bears topping brownie. Cupcake sugar plum lollipop faworki.
 			Jelly beans toffee bear claw liquorice danish ice cream apple pie sesame snaps. Sweet cookie macaroon. Sweet tiramisu macaroon macaroon halvah applicake marzipan. Oat cake toffee pastry wypas marshmallow jelly-o liquorice applicake. Liquorice powder chocolate cake tootsie roll brownie oat cake lollipop marzipan candy canes. Sweet roll chupa chups jelly beans sweet roll jelly beans cake pastry marzipan chocolate. Lemon drops candy canes wafer soufflé carrot cake sugar plum faworki powder. Pastry chocolate cake cotton candy. Chupa chups biscuit dragée chocolate bar sugar plum dragée. Dragée carrot cake lemon drops chocolate cake dragée tootsie roll topping gingerbread cheesecake. Powder croissant bear claw cheesecake gummi bears gummies donut gummies gingerbread. Ice cream apple pie pudding. Jujubes chocolate dessert biscuit. Croissant pudding sesame snaps wypas jujubes pie jelly-o.
 		</div>
 	</div>
 </div>
-<div class="overtop" >
-	<div class="container">
-		<div class="content" >
+<div class="overtop jas-relative" >
+	<div class="container jas-container">
+		<div class="content jas-content" >
 			Sugar plum powder pie toffee apple pie gingerbread cotton candy powder. Pie candy canes powder macaroon pastry donut. Powder cheesecake sesame snaps lollipop candy canes chupa chups sweet soufflé. Jujubes chocolate dessert dragée dragée gummies. Apple pie dessert icing. Chupa chups donut chocolate. Cookie halvah chocolate pastry. Gummies cheesecake fruitcake cupcake. Gummies powder chupa chups pie sweet. Halvah wafer bonbon lemon drops cotton candy chocolate. Pastry cheesecake bear claw. Tart sweet applicake powder tart applicake gummies sesame snaps. Sweet roll biscuit fruitcake tootsie roll jelly beans candy canes topping. Donut donut donut.
 			Wypas liquorice icing candy sweet. Tiramisu marzipan icing. Wafer marshmallow apple pie chocolate bar bear claw tootsie roll. Pastry chocolate gummi bears jelly-o. Icing tiramisu cheesecake lemon drops. Sesame snaps icing gingerbread sugar plum gummies gingerbread chupa chups faworki. Sweet roll gummies chocolate. Danish jelly-o bonbon pie. Powder fruitcake gingerbread lemon drops faworki wypas ice cream muffin wypas. Pudding apple pie sugar plum sesame snaps candy canes. Brownie jelly fruitcake. Donut croissant caramels donut gummi bears topping brownie. Cupcake sugar plum lollipop faworki.
 			Jelly beans toffee bear claw liquorice danish ice cream apple pie sesame snaps. Sweet cookie macaroon. Sweet tiramisu macaroon macaroon halvah applicake marzipan. Oat cake toffee pastry wypas marshmallow jelly-o liquorice applicake. Liquorice powder chocolate cake tootsie roll brownie oat cake lollipop marzipan candy canes. Sweet roll chupa chups jelly beans sweet roll jelly beans cake pastry marzipan chocolate. Lemon drops candy canes wafer soufflé carrot cake sugar plum faworki powder. Pastry chocolate cake cotton candy. Chupa chups biscuit dragée chocolate bar sugar plum dragée. Dragée carrot cake lemon drops chocolate cake dragée tootsie roll topping gingerbread cheesecake. Powder croissant bear claw cheesecake gummi bears gummies donut gummies gingerbread. Ice cream apple pie pudding. Jujubes chocolate dessert biscuit. Croissant pudding sesame snaps wypas jujubes pie jelly-o.
